--- a/Airlines.html
+++ b/Airlines.html
@@ -1,170 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boeing Aircraft Showcase</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f8fb;
-        }
-        header {
-            background-color: #004080;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        nav 
-        {
-            background-color: #e6e6e6;
-            text-align: center;
-            padding: 1em;
-        }
-        nav a 
-        {
-            color: #003366;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .aircrafts {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            padding: 20px;
-        }
-        .aircraft-card {
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            overflow: hidden;
-            width: 300px;
-            transition: transform 0.2s;
-        }
-        .aircraft-card:hover {
-            transform: scale(1.05);
-        }
-        .aircraft-card img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-        }
-        .aircraft-info {
-            padding: 15px;
-        }
-        .aircraft-info h3 {
-            margin: 0 0 10px;
-        }
-        .aircraft-info p {
-            margin: 5px 0;
-            font-size: 14px;
-            color: #555;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Top 10 Airlines of 2024</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: url('img/Night.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
+    }
+
+    header {
+      background-color: rgba(0, 0, 0, 0.7);
+      text-align: center;
+      padding: 60px 20px 30px;
+    }
+
+    header h1 {
+      font-size: 2.5em;
+      color: #ffcc00;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 1.1em;
+      color: #ddd;
+    }
+
+    .back-button {
+      text-align: center;
+      margin: 20px auto 0;
+    }
+
+    .back-button a {
+      background-color: #ffcc00;
+      color: #003366;
+      padding: 10px 20px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.3s;
+    }
+
+    .back-button a:hover {
+      background-color: #ffaa00;
+    }
+
+    section {
+      max-width: 1100px;
+      margin: 40px auto;
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.6);
+    }
+
+    h2 {
+      color: #ffcc00;
+      border-bottom: 2px solid #ffcc00;
+      margin-bottom: 30px;
+      font-size: 2em;
+    }
+
+    .airline {
+      margin-bottom: 35px;
+      padding-bottom: 25px;
+      border-bottom: 1px solid #555;
+    }
+
+    .airline h3 {
+      font-size: 1.5em;
+      margin-bottom: 8px;
+      color: #ffffff;
+    }
+
+    .airline img {
+      width: 100px;
+      display: block;
+      margin-bottom: 12px;
+    }
+
+    .airline p {
+      font-size: 1em;
+      line-height: 1.6em;
+      color: #eaeaea;
+    }
+
+    footer {
+      background-color: rgba(0, 0, 0, 0.7);
+      color: #ccc;
+      padding: 20px;
+      text-align: center;
+      font-size: 0.9em;
+    }
+
+    @media (max-width: 700px) {
+      section {
+        margin: 20px 15px;
+      }
+
+      .airline img {
+        margin: 0 auto 10px;
+      }
+    }
+  </style>
 </head>
 <body>
 
 <header>
-    <h1>Airlines</h1>
+  <h1>Top 10 Airlines of 2024</h1>
+  <p>Ranked by Skytrax Global Airline Awards</p>
 </header>
 
-<nav>
-    <a href="index.html">Home</a>
-    <a href="boeing.html">Aircrafts</a>
-    <a href="#">Airlines</a>
-    <a href="#">Safety</a>
-    <a href="#">Incidents</a>
-    <a href="#">Simulators</a>
-  </nav>
+<div class="back-button">
+  <a href="index.html">⬅ Back to Homepage</a>
+</div>
 
-<section class="aircrafts">
-    <section class="aircrafts">
+<section>
+  <h2>World's Best Airlines – Skytrax Ranking</h2>
 
-     <div class="airlines-info-box">
-        <h2>Explore the World's Top Airlines</h2>
-        <p>These airlines are leaders in safety, service, and fleet technology. Learn more about their performance and aircraft below.</p>
-        </div>
-      
-       
-    <!-- Qatar Airways -->
-    <div class="aircraft-card">
-        <img src="img/QatarAirways.jpg" alt="QatarAirways">
-        <div class="aircraft-info">
-            <h3>Qatar Airways</h3>
-            <p><strong>Established:</strong> November 22, 1963</p>
-            <p><strong>Fleet:</strong> 200</p>
-            <p><strong>Best Aircraft:</strong> A380 and A350</p>
-            <p><strong>Most Passengers in 1 year:</strong> Fiscal year (2024) with 40 million passengers</p>
-            <p><strong>Rating:</strong> AA (Great)</p>
-            <p><strong>Safest in list:</strong> #5</p>
-            <p><strong>Qatar Airways is the #1 best airline to fly on by Skytrax. The airline, based in Doha, focuses on comfort and fine cuisine. It also has a modern fleet averaging 5 years of age. It has award winning service, latest in-flight audio and video entertainment, award-winning service, and has a fleet of 200 aircraft. The airline flies to Australia, Asia, Europe, Middle East, Africa, Noth America, and South America. It is a certified 5-star airliner. Visit them at qatarairways.com</strong></p>
-        </div>
-    </div>
+  <div class="airline">
+    <h3>1. Qatar Airways</h3>
+    <img src="img/QatarAirways.png" alt="Qatar Airways Logo">
+    <p>Qatar Airways, based in Doha, is recognized for its Qsuite business class, A350 fleet, world-class catering, and refined onboard experience. It operates to over 160 destinations and is part of the oneworld alliance. Its hub, Hamad International Airport, is among the best globally.</p>
+  </div>
 
-    <!-- Singapore Airlines -->
-    <div class="aircraft-card">
-        <img src="img/SingaporeAirlines.jpg" alt=SingaporeAirlines>
-        <div class="aircraft-info">
-            <h3>Singapore Airlines</h3>
-            <p><strong>Established:</strong> January 28th, 1962</p>
-            <p><strong>Fleet:</strong> 180</p>
-            <p><strong>Best Aircraft:</strong> Airbus A380 and Airbus A350</p>
-            <p><strong>Most Passengers in 1 year:</strong> SI GROUPS 2024 FINANCIAL YEAR, 39 million passengers.</p>
-            <p><strong>Rating:</strong> 100% score in rating in Safety, 100% score in Product, 69% score in passenger experience</p>
-            <p><strong>Safest in list:</strong> #13</p>
-            <p><strong>Singapore Airlines success has been fueled by its dedication to customer service. Its in-flight menu in all classes offer gourmet meals created by internationally renowned chefs. All customers can enjoy the state-of-the-art in-flight entertainment system, which offers a variety of different movies, music, and games. Singapore Airlines offers a fleet of over 180 aircraft. With 110 destinations. They have 7/7 rating for safety, 7/7 rating for product, and a 6.9 rating for Passenger Experience.</strong></p>
-        </div>
-    </div>
+  <div class="airline">
+    <h3>2. Singapore Airlines</h3>
+    <img src="img/SingaporeAirlines.png" alt="Singapore Airlines Logo">
+    <p>Singapore Airlines stands out for its hospitality, KrisWorld entertainment, and top-tier service across all classes. Operating from Changi Airport, it runs a modern fleet including the A350, Boeing 787-10, and A380, with a global reputation for safety and punctuality.</p>
+  </div>
 
-    <!-- Emirates Airlines -->
-    <div class="aircraft-card">
-        <img src="img/EmiratesAirlines.jpg" alt="Emirates">
-        <div class="aircraft-info">
-            <h3>Emirates</h3>
-            <p><strong>Established:</strong> March 25th, 1985</p>
-            <p><strong>Most Passengers in 1 year:</strong> Fiscal year, 51 million passengers</p>
-            <p><strong>Best Aircraft:</strong> Airbus A380 and Boeing 777</p>
-            <p><strong>Fleet:</strong> 262</p>
-            <p><strong>Safest Airline in List:</strong> #6</p>
-            <p><strong>Emirates connects the world to, and through, their global hub located in Dubai. They operate modern, more efficient, and comfortable aircraft, and their diverse workforce delivers award-winning services to their customers across the globe everyday. Emirates fleet consists of 262 aircraft, with 152 destinations. They have 100% score in safety, 100% score in Product, and 68% score passenger experience.</strong></p>
-        </div>
-    </div>
+  <div class="airline">
+    <h3>3. Emirates</h3>
+    <img src="img/EmiratesAirlines.png" alt="Emirates Logo">
+    <p>Emirates, based in Dubai, is famous for its ICE inflight entertainment, luxurious first-class suites, and vast long-haul route network. It operates the largest A380 fleet and connects over 150 destinations worldwide.</p>
+  </div>
 
-    <!-- ANA Airlines -->
-    <div class="aircraft-card">
-        <img src="img/ANA.jpg" alt="Boeing 737">
-        <div class="aircraft-info">
-            <h3>ANA</h3>
-            <p><strong>Established:</strong> December 27th, 1952</p>
-            <p><strong>Most Passengers in 1 year:</strong> 2016, with 52.1 million passengers.</p>
-            <p><strong>Best Aircraft:</strong> Boeing 787 Dreamliner</p>
-            <p><strong>Fleet:</strong> 262</p>
-            <p><strong>Rating:</strong> 100% Safety Score, 100% Product Score, 64% Passenger Experience Score</p>
-            <p><strong>Safest Airline in list:</strong> #7</p>
-            <p><strong>Fleet:</strong>ANA was founded in 1952 and has become Japan’s largest airline, as well as one of the most significant airlines in Asia, operating 82 international routes and 118 domestic routes. ANA has a unique dual hub model which allows passengers to Tokyo and connect through 2 airports in the metropolitan Tokyo, Narita and Haneda, to various destinations throughout Japan. It also offers same day connections to various North American, Asian, and Chinese cities. ANA has been a member of star alliance, since 1999.</p>
-        </div>
-    </div>
+  <div class="airline">
+    <h3>4. ANA All Nippon Airways</h3>
+    <img src="img/ANA.png" alt="ANA Logo">
+    <p>ANA is Japan’s largest airline and a member of Star Alliance. Known for its precision and service excellence, it offers clean, quiet cabins and premium offerings like "The Room" business class. ANA serves both domestic and international markets with Boeing 787 and A380 aircraft.</p>
+  </div>
 
-    <!-- Cathay Pacific Airways -->
-    <div class="aircraft-card">
-        <img src="img/CathayPacific.jpg" alt="Boeing 737">
-        <div class="aircraft-info">
-            <h3>Cathay Pacific Airways</h3>
-            <p><strong>Established:</strong> September 24thth, 1946</p>
-            <p><strong>Most Passengers in 1 year:</strong> 2024, with 28 million passengers.</p>
-            <p><strong>Best Aircraft:</strong> Boeing 787 Dreamliner</p>
-            <p><strong>Fleet:</strong> 200</p>
-            <p><strong>Rating:</strong> 100% Safety Score, 100% Product Score, 67% Passenger Experience Score</p>
-            <p><strong>Safest Airline in list:</strong> #9</p>
-            <p><strong>Fleet:</strong> Cathay Pacific, made on September 24th, 1946, and based in Hong-Kong, offers schedules passenger and cargo services to over 200 destinations in Asia, North America, Australia, Europe, and Africa. The airline has a fleet of almost 200 aircraft, with its best aircraft being the Boeing 777-300ER. The most passengers the airline had in 1 year was in 2024, with 28 million passengers.</p>
-        </div>
-    </div>
+  <div class="airline">
+    <h3>5. Cathay Pacific Airways</h3>
+    <img src="img/CathayPacific.jpg" alt="Cathay Pacific Logo">
+    <p>Based in Hong Kong, Cathay Pacific is known for its calm service, strong safety record, and modern long-haul fleet. It connects Asia to North America and Europe using Airbus A350s and Boeing 777-300ERs, and offers stylish lounges at its home base.</p>
+  </div>
 
+  <div class="airline">
+    <h3>6. Japan Airlines</h3>
+    <img src="img/JALLogo.png" alt="Japan Airlines Logo">
+    <p>JAL combines traditional Japanese hospitality with world-class service. Its Sky Suite business class is highly rated, and the airline is a leader in punctuality and transpacific comfort, especially from Tokyo Haneda and Narita airports.</p>
+  </div>
+
+  <div class="airline">
+    <h3>7. Turkish Airlines</h3>
+    <img src="img/TurkishLogo.png" alt="Turkish Airlines Logo">
+    <p>Flying to more countries than any other airline, Turkish Airlines is headquartered in Istanbul and is renowned for its inflight catering, onboard comfort, and lounge experience. Its global network includes Europe, Africa, Asia, and the Americas.</p>
+  </div>
+
+  <div class="airline">
+    <h3>8. EVA Air</h3>
+    <img src="img/EVALogo.png" alt="EVA Air Logo">
+    <p>Based in Taipei, EVA Air is known for its safety, cabin hygiene, and excellent premium economy. It connects Asia and North America with Boeing 777-300ER aircraft and is a Star Alliance member.</p>
+  </div>
+
+  <div class="airline">
+    <h3>9. Air France</h3>
+    <img src="img/AirFranceLogo.png" alt="Air France Logo">
+    <p>Air France has elevated its onboard service in recent years, especially in business class. It is the national carrier of France, serving Europe, North America, and Africa with Airbus A350 and Boeing 787 aircraft. It is part of the SkyTeam alliance.</p>
+  </div>
+
+  <div class="airline">
+    <h3>10. SWISS International Air Lines</h3>
+    <img src="img/SWISSLogo.png" alt="SWISS Logo">
+    <p>SWISS operates with efficiency and elegance. Based in Zurich, it offers premium short-haul and long-haul service and is well-known for punctuality and customer satisfaction. Its fleet includes A220, A320neo, A330, and Boeing 777 aircraft.</p>
+  </div>
+
+  <p style="margin-top: 30px;">Source: <a href="https://skytraxratings.com/qatar-airways-named-worlds-best-airline-at-2024-world-airline-awards" target="_blank" style="color:#ffcc00;">Skytrax World Airline Awards 2024</a></p>
 </section>
+
+<footer>
+  © 2025 Winged Wonders | A Genius Hour Project by Omar T.✈️
+</footer>
 
 </body>
 </html>
+
+
