--- a/index.html
+++ b/index.html
@@ -4,70 +4,244 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Winged Wonders</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  background-image: url('img/Night.jpg'); /* Make sure this image exists in the correct folder */
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
+    html {
+      scroll-behavior: smooth;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: url('img/Night.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
+    }
+
+    nav {
+      background-color: rgba(0, 0, 0, 0.7);
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
+      padding: 1em 0;
+      text-align: center;
+    }
+
+    nav a {
+      color: white;
+      margin: 0 20px;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1.1em;
+      padding: 10px 15px;
+      border-radius: 6px;
+      transition: background 0.3s;
+    }
+
+    nav a:hover {
+      background-color: rgba(255, 255, 255, 0.1);
+      color: #ffcc00;
+    }
 
     header {
-      background-color: #003366;
-      color: black;
-      padding: 2em;
+      background-color: rgba(0, 0, 0, 0.6);
       text-align: center;
+      padding: 140px 20px 50px;
     }
-    nav {
-      background-color: #e6e6e6;
-      text-align: center;
-      padding: 1em;
+
+    header h1 {
+      font-size: 3em;
+      margin-bottom: 10px;
+      text-shadow: 2px 2px 8px #000;
     }
-    nav a {
+
+    header p {
+      font-size: 1.2em;
+      margin-bottom: 30px;
+      text-shadow: 1px 1px 5px #000;
+    }
+
+    .start-button {
+      background-color: #ffcc00;
       color: #003366;
-      margin: 0 15px;
-      text-decoration: none;
+      font-weight: bold;
+      border: none;
+      padding: 12px 24px;
+      border-radius: 8px;
+      font-size: 1em;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .start-button:hover {
+      background-color: #ffaa00;
+    }
+
+    section {
+      background-color: rgba(0, 0, 0, 0.6);
+      margin: 40px auto;
+      padding: 40px 20px;
+      border-radius: 12px;
+      max-width: 1000px;
+      text-align: center;
+      box-shadow: 0 0 10px rgba(0,0,0,0.4);
+    }
+
+    section h2 {
+      color: #ffcc00;
+      font-size: 2em;
+      margin-bottom: 20px;
+    }
+
+    #intro {
+      background-color: rgba(0, 0, 0, 0.6);
+      margin: 40px auto;
+      padding: 30px 20px;
+      border-radius: 12px;
+      max-width: 900px;
+      text-align: center;
+      box-shadow: 0 0 10px rgba(0,0,0,0.4);
+    }
+
+    #intro h2 {
+      color: #ffcc00;
+      font-size: 2em;
+      margin-bottom: 15px;
+    }
+
+    .card-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+    }
+
+    .card {
+      background-color: rgba(255, 255, 255, 0.1);
+      border-radius: 10px;
+      padding: 20px;
+      width: 260px;
+      text-align: left;
+      color: #f0f0f0;
+      transition: transform 0.3s;
+      border: 1px solid #ffffff22;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+      background-color: rgba(255, 255, 255, 0.15);
+    }
+
+    .card img {
+      width: 100%;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 6px;
+      margin-bottom: 10px;
+    }
+
+    a.cta-link {
+      color: #ffcc00;
+      text-decoration: underline;
       font-weight: bold;
     }
-    main {
-      padding: 2em;
-      text-align: center;
-    }
+
     footer {
-      background-color: #003366;
-      color: black;
-      padding: 1em;
+      background-color: rgba(0, 0, 0, 0.7);
+      color: #ccc;
+      padding: 20px;
       text-align: center;
+      font-size: 0.9em;
+    }
+
+    @media (max-width: 700px) {
+      .card {
+        width: 90%;
+      }
+
+      nav a {
+        display: block;
+        margin: 10px 0;
+      }
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>Winged Wonders</h1>
-    <p>Let's explore the world of airplanes</p>
-  </header>
+<nav>
+  <a href="#">Home</a>
+  <a href="boeing.html">Aircrafts</a>
+  <a href="Airlines.html">Airlines</a>
+  <a href="Safety.html">Safety</a>
+  <a href="Incidents.html">Incidents</a>
+  <a href="Simulators.html">Simulators</a>
+</nav>
 
-  <nav>
-    <a href="#">Home</a>
-    <a href="boeing.html">Aircrafts</a>
-    <a href="Airlines.html">Airlines</a>
-    <a href="#">Safety</a>
-    <a href="#">Incidents</a>
-    <a href="#">Simulators</a>
-  </nav>
+<header>
+  <h1>Winged Wonders</h1>
+  <p>Explore the sky one plane at a time ✈️</p>
+  <a href="#aircraft"><button class="start-button">Start Exploring</button></a>
+</header>
 
-  <main>
-    <h2>Welcome!</h2>
-    <p>This website is all about airplanes! Here you will find everything from Boeing and Airbus aircraft to airline rankings, flight simulators, and safety tips.</p>
-    <p>Use the navigation above to start exploring!</p>
-  </main>
+<section id="intro">
+  <h2>Welcome to Winged Wonders!</h2>
+  <p>This website is your one-stop destination to explore the amazing world of airplanes. From legendary aircraft models and top airlines to real aviation incidents, flight safety, and even simulators — there’s something here for every curious mind.</p>
+</section>
 
-  <footer>
-    <p>© 2025 Winged Wonders | Created by TotallyNotRandomStudios</p>
-  </footer>
+<section id="aircraft">
+  <h2>✈️ Discover Aircraft</h2>
+  <div class="card-container">
+    <div class="card">
+      <img src="img/Boeing_787_image.jpg" alt="Boeing 787 Dreamliner">
+      <h3>Boeing 787 Dreamliner</h3>
+      <p>Fuel-efficient and quiet, the Dreamliner changed long-distance flying.</p>
+    </div>
+    <div class="card">
+      <img src="img/AirbusA380Fixed.jpg" alt="Airbus A380">
+      <h3>Airbus A380</h3>
+      <p>World’s largest passenger plane — two full decks of flying luxury.</p>
+    </div>
+    <div class="card">
+      <img src="img/Boeing_737_Featured_Aircraft.png" alt="Boeing 737">
+      <h3>Boeing 737</h3>
+      <p>The most widely used commercial jet in aviation history.</p>
+    </div>
+  </div>
+  <br>
+  <p><strong>Did You Know?</strong> The Airbus A380’s wingspan is as wide as a football field.  
+  And the first ever commercial flight was just 21 miles long!</p>
+  <p><a class="cta-link" href="boeing.html">Explore more aircraft facts and models →</a></p>
+</section>
+
+<section>
+  <h2>🏆 Explore Airlines</h2>
+  <p>From Emirates and Qatar to Air Canada and Singapore Airlines — learn what makes each airline unique, luxurious, or efficient.</p>
+  <p><a class="cta-link" href="Airlines.html">Compare top airlines →</a></p>
+</section>
+
+<section>
+  <h2>⚠️ When Things Go Wrong</h2>
+  <p>Explore real-world aviation incidents and how pilots, crews, and systems responded. These stories help us learn about safety improvements and resilience.</p>
+  <p><a class="cta-link" href="Incidents.html">Read about major incidents →</a></p>
+</section>
+
+<section>
+  <h2>✅ Safety in the Skies</h2>
+  <p>Flying is one of the safest ways to travel. Learn how modern aircraft, maintenance, and training keep millions of passengers safe every day.</p>
+  <p><a class="cta-link" href="Safety.html">Discover how aviation stays safe →</a></p>
+</section>
+
+<section>
+  <h2>🎮 Simulators</h2>
+  <p>Want to fly a plane from your home? Try flight simulator games like Microsoft Flight Simulator and X-Plane. Learn takeoffs, landings, and navigation.</p>
+  <p><a class="cta-link" href="Simulators.html">Try flight simulators →</a></p>
+</section>
+
+<footer>
+  © 2025 Winged Wonders | A Genius Hour Project by Omar T. ✈️
+</footer>
 
 </body>
 </html>
