--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: url('img/Night.jpg') no-repeat center center fixed;
+      background: url('img/Sky.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
     }
