--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <p>Fuel-efficient and quiet, the Dreamliner changed long-distance flying.</p>
     </div>
     <div class="card">
-      <img src="img/AirbusA380Fixed.jpg" alt="Airbus A380">
+      <img src="img/AirbusA380.jpg" alt="Airbus A380">
       <h3>Airbus A380</h3>
       <p>World’s largest passenger plane — two full decks of flying luxury.</p>
     </div>
