Done with images

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <p>World’s largest passenger plane — two full decks of flying luxury.</p>
     </div>
     <div class="card">
-      <img src="img/Boeing_737_Featured_Aircraft.png" alt="Boeing 737">
+      <img src="img/Boeing_737_Featured_Aircraft.jpg" alt="Boeing 737">
       <h3>Boeing 737</h3>
       <p>The most widely used commercial jet in aviation history.</p>
     </div>
