All I need to do is add Airbus list

--- a/boeing.html
+++ b/boeing.html
@@ -146,7 +146,7 @@
 <section>
   <h2>✈️ Boeing Aircraft</h2>
   <div class="image-text-wrap">
-    <img src="img/BoeingList.jpg" alt="Boeing Aircraft Comparison" class="side-image">
+    <img src="img/BoeingAircraftComparison.jpg" alt="Boeing Aircraft Comparison" class="side-image">
     <div class="aircraft-grid">
       <div class="aircraft-card"><h3>Boeing 707</h3><p>First Flight: 1957<br>Variants: 707-120, -320<br>Used By: Pan Am, TWA (retired)<br>The original jetliner that launched the Jet Age.</p></div>
       <div class="aircraft-card"><h3>Boeing 727</h3><p>First Flight: 1963<br>Variants: 727-100, -200<br>Used By: FedEx, Eastern Airlines<br>Three-engine design ideal for short runways.</p></div>
