--- a/boeing.html
+++ b/boeing.html
@@ -10,7 +10,7 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: url('img/Night.jpg') no-repeat center center fixed;
+      background: url('img/Stars.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
     }
