--- a/boeing.html
+++ b/boeing.html
@@ -163,7 +163,7 @@
 <section>
   <h2>🛫 Airbus Aircraft</h2>
   <div class="image-text-wrap">
-    <img src="img/AirbusList.jpg" alt="Airbus Aircraft Comparison" class="side-image">
+    <img src="img/AirbusComparison.jpg" alt="Airbus Aircraft Comparison" class="side-image">
     <div class="aircraft-grid">
       <div class="aircraft-card"><h3>Airbus A300</h3><p>First Flight: 1972<br>Variants: A300B2, B4<br>Used By: DHL, Iran Air<br>The first twin-engine wide-body jet.</p></div>
       <div class="aircraft-card"><h3>Airbus A310</h3><p>First Flight: 1982<br>Variants: A310-200, -300<br>Used By: FedEx, Canadian Gov<br>Medium-haul variant of the A300.</p></div>
